# dde-file-manager-extensions

./: CMakeLists.txt
debian/: changelog  control  copyright
src/: CMakeLists.txt
src/dde-file-manager/: CMakeLists.txt
src/dde-file-manager/filemanager-plugin-demo1/: CMakeLists.txt  dfmplugin_demo1_global.h  plugin_demo1.cpp  plugin_demo1.h  plugin_diskencryptentry.h
src/dde-file-manager/filemanager-plugin-demo1/utils/: demo1manager.cpp  demo1manager.h
src/dde-file-manager/filemanager-plugin-demo1/view/: Demo1View.cpp  Demo1View.h
src/dde-file-manager/filemanager-plugin-demo2/: CMakeLists.txt  dfmplugin_demo2_global.h  filemanager-plugin-demo2.json  plugin_demo2.cpp  plugin_demo2.h
src/dde-file-manager/filemanager-plugin-demo2/files/: demo2entryfileentity.cpp  demo2entryfileentity.h  demo2fileinfo.cpp  demo2fileinfo.h  demo2fileiterator.cpp  demo2fileiterator.h  demo2filewatcher.cpp  demo2filewatcher.h
src/dde-file-manager/filemanager-plugin-demo2/menu/: demo2menuscene.cpp  demo2menuscene.h
src/dde-file-manager/filemanager-plugin-demo2/utils/: demo2manager.cpp  demo2manager.h
src/dde-file-manager/filemanager-plugin-demo2/view/: Demo2View.cpp  Demo2View.h
